Update expand menu for smaller screens on web

--- a/BookStore.Mobile/wwwroot/index.html
+++ b/BookStore.Mobile/wwwroot/index.html
@@ -23,7 +23,7 @@
 
     <div class="status-bar-safe-area"></div>
 
-    <div id="app">Loading...</div>
+    <div id="app" class="d-flex justify-content-center align-items-center min-vh-100 min-vw-100">Initializing app...</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
